--- a/twitter.html
+++ b/twitter.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>youtube</title>
+    <title>twitter</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg">
-    <a href="https://gustavoguanabara.github.io/" target="_blank">ACESSE</a>
+    <img src="imagens/tela-twitter.jpg" alt="tw">
+    <a href="https://x.com/guanabara" target="_blank"></a>
 </body>
 </html>
